--- a/Develop/index.html
+++ b/Develop/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>website</title>
+    <!--added descriptive tite-->
+    <title>Horiseon</title>
   </head>
 
   <body>
-    <div class="header">
+    <header>
       <h1>Hori<span class="seo">seo</span>n</h1>
-      <div>
+      <nav>
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,14 +24,22 @@
             <a href="#social-media-marketing">Social Media Marketing</a>
           </li>
         </ul>
-      </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
-      <div class="search-engine-optimization">
+      </nav>
+    </header>
+    <!--changed div class hero to 'figure' semantic html-->
+    <!--added a title to the background image for accessability, as I couldn't find a way to
+      attach an img alt attribute with the img in css instead of html-->
+    <figure title="Four people in a meeting"></figure>
+    <!--changed div class content to 'main' semantic html-->
+    <main>
+      <!--fixed broken same-page anchor link to search engine optimization-->
+      <!--changed class to main-content to consolidate CSS-->
+      <div id="search-engine-optimization" class="main-content">
+        <!--added alt text for image-->
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
+          alt="Notepad on table with pens, a coffee, and laptop around it"
         />
         <h2>Search Engine Optimization</h2>
         <p>
@@ -40,13 +49,13 @@
           visibility and find the right customers for your business.
         </p>
       </div>
-      <div
-        id="online-reputation-management"
-        class="online-reputation-management"
-      >
+      <!--changed class to main-content to consolidate CSS-->
+      <div id="online-reputation-management" class="main-content">
+        <!--added alt text for image-->
         <img
           src="./assets/images/online-reputation-management.jpg"
           class="float-right"
+          alt="Person using a laptop with the text 'Reputation' on it"
         />
         <h2>Online Reputation Management</h2>
         <p>
@@ -57,10 +66,13 @@
           business.
         </p>
       </div>
-      <div id="social-media-marketing" class="social-media-marketing">
+      <!--changed class to main-content to consolidate CSS-->
+      <div id="social-media-marketing" class="main-content">
+        <!--added alt text for image-->
         <img
           src="./assets/images/social-media-marketing.jpg"
           class="float-left"
+          alt="6 people around a table discussing social media"
         />
         <h2>Social Media Marketing</h2>
         <p>
@@ -70,36 +82,53 @@
           your lead generation.
         </p>
       </div>
-    </div>
-    <div class="benefits">
-      <div class="benefit-lead">
+    </main>
+    <!--changed div class benefits to 'aside' semantic html-->
+    <aside>
+      <!--changed div class to benefit-content to consolidate CSS-->
+      <div class="benefit-content">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <!--added alt text for image-->
+        <img
+          src="./assets/images/lead-generation.png"
+          alt="A cog with a funnel leading into a dollar sign"
+        />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
       </div>
-      <div class="benefit-brand">
+      <!--changed div class to benefit-content to consolidate css-->
+      <div class="benefit-content">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
+        <!--added alt text for image-->
+        <img
+          src="./assets/images/brand-awareness.png"
+          alt="Person with lightbulb head being alert"
+        />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
         </p>
       </div>
-      <div class="benefit-cost">
+      <!--changed div class to benefit-content to consolidate css-->
+      <div class="benefit-content">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" />
+        <!--added alt text for image-->
+        <img
+          src="./assets/images/cost-management.png"
+          alt="A cog with three dollar signs infront of it"
+        />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
       </div>
-    </div>
-    <div class="footer">
+    </aside>
+    <!--changed div class footer to 'footer' semantic html-->
+    <footer>
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
   </body>
 </html>
